# qt-core

./: Containers_qt  README.md
Container_qt/: CMakeLists.txt  car.cpp  car.h  main.cpp
Tutorial_one/: CMakeLists.txt  four_wheel.cpp  four_wheel.h  main.cpp  shape.cpp  shape.h  truck.cpp  truck.h
